- Adapted for the change at IDF's site (the way they gets their districts), it make it more efficient for me to read it  - now they publich in one place the protection time for each district, so I dont need the soundLoopCount setting anymore, now `soundLoopCount = ⎣max(district->protectionTime) / length(alarmSound.wav) (in seconds) + 0.5⎦`
Signed-off-by: Roy Ash <roy.ash456@gmail.com>